--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
+Version 1.0-3
+-------------
+
+* add svalue(gtext_object, drop=TRUE) <- method to replace selected text
+
 Version 1.0-2
 -------------
+
+* no major change, but used to get through CRAN
 
 Version 1.0-1
 --------------
